sdk/netapp/arm-netapp/samples/v17/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                     | **Description**                                                                                                                                                                                                                                                                                                                                              |
| ------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [accountBackupsDeleteSample.ts][accountbackupsdeletesample]                                       | Delete the specified Backup for a Netapp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Backups_Account_Delete.json                                                                                                                                                                           |
| [accountBackupsGetSample.ts][accountbackupsgetsample]                                             | Gets the specified backup for a Netapp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Backups_Account_Get.json                                                                                                                                                                                |
| [accountBackupsListSample.ts][accountbackupslistsample]                                           | List all Backups for a Netapp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Backups_Account_List.json                                                                                                                                                                                        |
| [accountsCreateOrUpdateSample.ts][accountscreateorupdatesample]                                   | Create or update the specified NetApp account within the resource group x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Accounts_CreateOrUpdate.json                                                                                                                                                   |
| [accountsDeleteSample.ts][accountsdeletesample]                                                   | Delete the specified NetApp account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Accounts_Delete.json                                                                                                                                                                                               |
| [accountsGetSample.ts][accountsgetsample]                                                         | Get the NetApp account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Accounts_Get.json                                                                                                                                                                                                               |
| [accountsListBySubscriptionSample.ts][accountslistbysubscriptionsample]                           | List and describe all NetApp accounts in the subscription. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Accounts_List.json                                                                                                                                                                          |
| [accountsListSample.ts][accountslistsample]                                                       | List and describe all NetApp accounts in the resource group. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Accounts_List.json                                                                                                                                                                        |
| [accountsRenewCredentialsSample.ts][accountsrenewcredentialssample]                               | Renew identity credentials that are used to authenticate to key vault, for customer-managed key encryption. If encryption.identity.principalId does not match identity.principalId, running this operation will fix it. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Accounts_RenewCredentials.json |
| [accountsUpdateSample.ts][accountsupdatesample]                                                   | Patch the specified NetApp account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Accounts_Update.json                                                                                                                                                                                                |
| [backupPoliciesCreateSample.ts][backuppoliciescreatesample]                                       | Create a backup policy for Netapp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/BackupPolicies_Create.json                                                                                                                                                                                   |
| [backupPoliciesDeleteSample.ts][backuppoliciesdeletesample]                                       | Delete backup policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/BackupPolicies_Delete.json                                                                                                                                                                                                        |
| [backupPoliciesGetSample.ts][backuppoliciesgetsample]                                             | Get a particular backup Policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/BackupPolicies_Get.json                                                                                                                                                                                                 |
| [backupPoliciesListSample.ts][backuppolicieslistsample]                                           | List backup policies for Netapp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/BackupPolicies_List.json                                                                                                                                                                                       |
| [backupPoliciesUpdateSample.ts][backuppoliciesupdatesample]                                       | Patch a backup policy for Netapp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/BackupPolicies_Update.json                                                                                                                                                                                    |
| [backupsCreateSample.ts][backupscreatesample]                                                     | Create a backup for the volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Backups_Create.json                                                                                                                                                                                                     |
| [backupsDeleteSample.ts][backupsdeletesample]                                                     | Delete a backup of the volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Backups_Delete.json                                                                                                                                                                                                      |
| [backupsGetSample.ts][backupsgetsample]                                                           | Gets the specified backup of the volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Backups_Get.json                                                                                                                                                                                               |
| [backupsGetStatusSample.ts][backupsgetstatussample]                                               | Get the status of the backup for a volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_BackupStatus.json                                                                                                                                                                                    |
| [backupsGetVolumeRestoreStatusSample.ts][backupsgetvolumerestorestatussample]                     | Get the status of the restore for a volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_RestoreStatus.json                                                                                                                                                                                  |
| [backupsListSample.ts][backupslistsample]                                                         | List all backups for a volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Backups_List.json                                                                                                                                                                                                        |
| [backupsUpdateSample.ts][backupsupdatesample]                                                     | Patch a backup for the volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Backups_Update.json                                                                                                                                                                                                      |
| [netAppResourceCheckFilePathAvailabilitySample.ts][netappresourcecheckfilepathavailabilitysample] | Check if a file path is available. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/CheckFilePathAvailability.json                                                                                                                                                                                      |
| [netAppResourceCheckNameAvailabilitySample.ts][netappresourcechecknameavailabilitysample]         | Check if a resource name is available. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/CheckNameAvailability.json                                                                                                                                                                                      |
| [netAppResourceCheckQuotaAvailabilitySample.ts][netappresourcecheckquotaavailabilitysample]       | Check if a quota is available. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/CheckQuotaAvailability.json                                                                                                                                                                                             |
| [netAppResourceQueryRegionInfoSample.ts][netappresourcequeryregioninfosample]                     | Provides storage to network proximity and logical zone mapping information. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/RegionInfo.json                                                                                                                                                            |
| [netAppResourceQuotaLimitsGetSample.ts][netappresourcequotalimitsgetsample]                       | Get the default and current subscription quota limit x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/QuotaLimits_Get.json                                                                                                                                                                              |
| [netAppResourceQuotaLimitsListSample.ts][netappresourcequotalimitslistsample]                     | Get the default and current limits for quotas x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/QuotaLimits_List.json                                                                                                                                                                                    |
| [operationsListSample.ts][operationslistsample]                                                   | Lists all of the available Microsoft.NetApp Rest API operations x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/OperationList.json                                                                                                                                                                     |
| [poolsCreateOrUpdateSample.ts][poolscreateorupdatesample]                                         | Create or Update a capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Pools_CreateOrUpdate.json                                                                                                                                                                                             |
| [poolsDeleteSample.ts][poolsdeletesample]                                                         | Delete the specified capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Pools_Delete.json                                                                                                                                                                                                   |
| [poolsGetSample.ts][poolsgetsample]                                                               | Get details of the specified capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Pools_Get.json                                                                                                                                                                                              |
| [poolsListSample.ts][poolslistsample]                                                             | List all capacity pools in the NetApp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Pools_List.json                                                                                                                                                                                          |
| [poolsUpdateSample.ts][poolsupdatesample]                                                         | Patch the specified capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Pools_Update.json                                                                                                                                                                                                    |
| [snapshotPoliciesCreateSample.ts][snapshotpoliciescreatesample]                                   | Create a snapshot policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/SnapshotPolicies_Create.json                                                                                                                                                                                                  |
| [snapshotPoliciesDeleteSample.ts][snapshotpoliciesdeletesample]                                   | Delete snapshot policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/SnapshotPolicies_Delete.json                                                                                                                                                                                                    |
| [snapshotPoliciesGetSample.ts][snapshotpoliciesgetsample]                                         | Get a snapshot Policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/SnapshotPolicies_Get.json                                                                                                                                                                                                        |
| [snapshotPoliciesListSample.ts][snapshotpolicieslistsample]                                       | List snapshot policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/SnapshotPolicies_List.json                                                                                                                                                                                                        |
| [snapshotPoliciesListVolumesSample.ts][snapshotpolicieslistvolumessample]                         | Get volumes associated with snapshot policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/SnapshotPolicies_ListVolumes.json                                                                                                                                                                          |
| [snapshotPoliciesUpdateSample.ts][snapshotpoliciesupdatesample]                                   | Patch a snapshot policy x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/SnapshotPolicies_Update.json                                                                                                                                                                                                   |
| [snapshotsCreateSample.ts][snapshotscreatesample]                                                 | Create the specified snapshot within the given volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Snapshots_Create.json                                                                                                                                                                            |
| [snapshotsDeleteSample.ts][snapshotsdeletesample]                                                 | Delete snapshot x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Snapshots_Delete.json                                                                                                                                                                                                                  |
| [snapshotsGetSample.ts][snapshotsgetsample]                                                       | Get details of the specified snapshot x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Snapshots_Get.json                                                                                                                                                                                               |
| [snapshotsListSample.ts][snapshotslistsample]                                                     | List all snapshots associated with the volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Snapshots_List.json                                                                                                                                                                                      |
| [snapshotsRestoreFilesSample.ts][snapshotsrestorefilessample]                                     | Restore the specified files from the specified snapshot to the active filesystem x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Snapshots_SingleFileRestore.json                                                                                                                                      |
| [snapshotsUpdateSample.ts][snapshotsupdatesample]                                                 | Patch a snapshot x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Snapshots_Update.json                                                                                                                                                                                                                 |
| [subvolumesCreateSample.ts][subvolumescreatesample]                                               | Creates a subvolume in the path or clones the subvolume mentioned in the parentPath x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Subvolumes_Create.json                                                                                                                                             |
| [subvolumesDeleteSample.ts][subvolumesdeletesample]                                               | Delete subvolume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Subvolumes_Delete.json                                                                                                                                                                                                                |
| [subvolumesGetMetadataSample.ts][subvolumesgetmetadatasample]                                     | Get details of the specified subvolume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Subvolumes_Metadata.json                                                                                                                                                                                        |
| [subvolumesGetSample.ts][subvolumesgetsample]                                                     | Returns the path associated with the subvolumeName provided x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Subvolumes_Get.json                                                                                                                                                                        |
| [subvolumesListByVolumeSample.ts][subvolumeslistbyvolumesample]                                   | Returns a list of the subvolumes in the volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Subvolumes_List.json                                                                                                                                                                                    |
| [subvolumesUpdateSample.ts][subvolumesupdatesample]                                               | Patch a subvolume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Subvolumes_Update.json                                                                                                                                                                                                               |
| [vaultsListSample.ts][vaultslistsample]                                                           | List vaults for a Netapp Account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Vaults_List.json                                                                                                                                                                                                      |
| [volumeGroupsCreateSample.ts][volumegroupscreatesample]                                           | Create a volume group along with specified volumes x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/VolumeGroups_Create.json                                                                                                                                                                            |
| [volumeGroupsDeleteSample.ts][volumegroupsdeletesample]                                           | Delete the specified volume group only if there are no volumes under volume group. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/VolumeGroups_Delete.json                                                                                                                                            |
| [volumeGroupsGetSample.ts][volumegroupsgetsample]                                                 | Get details of the specified volume group x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/VolumeGroups_Get.json                                                                                                                                                                                        |
| [volumeGroupsListByNetAppAccountSample.ts][volumegroupslistbynetappaccountsample]                 | List all volume groups for given account x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/VolumeGroups_List.json                                                                                                                                                                                        |
| [volumeQuotaRulesCreateSample.ts][volumequotarulescreatesample]                                   | Create the specified quota rule within the given volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/VolumeQuotaRules_Create.json                                                                                                                                                                   |
| [volumeQuotaRulesDeleteSample.ts][volumequotarulesdeletesample]                                   | Delete quota rule x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/VolumeQuotaRules_Delete.json                                                                                                                                                                                                         |
| [volumeQuotaRulesGetSample.ts][volumequotarulesgetsample]                                         | Get details of the specified quota rule x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/VolumeQuotaRules_Get.json                                                                                                                                                                                      |
| [volumeQuotaRulesListByVolumeSample.ts][volumequotaruleslistbyvolumesample]                       | List all quota rules associated with the volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/VolumeQuotaRules_List.json                                                                                                                                                                             |
| [volumeQuotaRulesUpdateSample.ts][volumequotarulesupdatesample]                                   | Patch a quota rule x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/VolumeQuotaRules_Update.json                                                                                                                                                                                                        |
| [volumesAuthorizeReplicationSample.ts][volumesauthorizereplicationsample]                         | Authorize the replication connection on the source volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_AuthorizeReplication.json                                                                                                                                                            |
| [volumesBreakReplicationSample.ts][volumesbreakreplicationsample]                                 | Break the replication connection on the destination volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_BreakReplication.json                                                                                                                                                               |
| [volumesCreateOrUpdateSample.ts][volumescreateorupdatesample]                                     | Create or update the specified volume within the capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_CreateOrUpdate.json                                                                                                                                                             |
| [volumesDeleteReplicationSample.ts][volumesdeletereplicationsample]                               | Delete the replication connection on the destination volume, and send release to the source replication x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_DeleteReplication.json                                                                                                                 |
| [volumesDeleteSample.ts][volumesdeletesample]                                                     | Delete the specified volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_Delete.json                                                                                                                                                                                                        |
| [volumesFinalizeRelocationSample.ts][volumesfinalizerelocationsample]                             | Finalizes the relocation of the volume and cleans up the old volume. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_FinalizeRelocation.json                                                                                                                                                   |
| [volumesGetSample.ts][volumesgetsample]                                                           | Get the details of the specified volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_Get.json                                                                                                                                                                                               |
| [volumesListReplicationsSample.ts][volumeslistreplicationssample]                                 | List all replications for a specified volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_ListReplications.json                                                                                                                                                                             |
| [volumesListSample.ts][volumeslistsample]                                                         | List all volumes within the capacity pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_List.json                                                                                                                                                                                            |
| [volumesPoolChangeSample.ts][volumespoolchangesample]                                             | Moves volume to another pool x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_PoolChange.json                                                                                                                                                                                                   |
| [volumesReInitializeReplicationSample.ts][volumesreinitializereplicationsample]                   | Re-Initializes the replication connection on the destination volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_ReInitializeReplication.json                                                                                                                                               |
| [volumesReestablishReplicationSample.ts][volumesreestablishreplicationsample]                     | Re-establish a previously deleted replication between 2 volumes that have a common ad-hoc or policy-based snapshots x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_ReestablishReplication.json                                                                                                |
| [volumesRelocateSample.ts][volumesrelocatesample]                                                 | Relocates volume to a new stamp x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_Relocate.json                                                                                                                                                                                                  |
| [volumesReplicationStatusSample.ts][volumesreplicationstatussample]                               | Get the status of the replication x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_ReplicationStatus.json                                                                                                                                                                                       |
| [volumesResetCifsPasswordSample.ts][volumesresetcifspasswordsample]                               | Reset cifs password from volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_ResetCifsPassword.json                                                                                                                                                                                         |
| [volumesResyncReplicationSample.ts][volumesresyncreplicationsample]                               | Resync the connection on the destination volume. If the operation is ran on the source volume it will reverse-resync the connection and sync from destination to source. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_ResyncReplication.json                                                |
| [volumesRevertRelocationSample.ts][volumesrevertrelocationsample]                                 | Reverts the volume relocation process, cleans up the new volume and starts using the former-existing volume. x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_RevertRelocation.json                                                                                                             |
| [volumesRevertSample.ts][volumesrevertsample]                                                     | Revert a volume to the snapshot specified in the body x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_Revert.json                                                                                                                                                                              |
| [volumesUpdateSample.ts][volumesupdatesample]                                                     | Patch the specified volume x-ms-original-file: specification/netapp/resource-manager/Microsoft.NetApp/stable/2022-05-01/examples/Volumes_Update.json                                                                                                                                                                                                         |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/accountBackupsDeleteSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env NETAPP_SUBSCRIPTION_ID="<netapp subscription id>" NETAPP_RESOURCE_GROUP="<netapp resource group>" node dist/accountBackupsDeleteSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[accountbackupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/accountBackupsDeleteSample.ts
[accountbackupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/accountBackupsGetSample.ts
[accountbackupslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/accountBackupsListSample.ts
[accountscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/accountsCreateOrUpdateSample.ts
[accountsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/accountsDeleteSample.ts
[accountsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/accountsGetSample.ts
[accountslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/accountsListBySubscriptionSample.ts
[accountslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/accountsListSample.ts
[accountsrenewcredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/accountsRenewCredentialsSample.ts
[accountsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/accountsUpdateSample.ts
[backuppoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupPoliciesCreateSample.ts
[backuppoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupPoliciesDeleteSample.ts
[backuppoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupPoliciesGetSample.ts
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupPoliciesListSample.ts
[backuppoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupPoliciesUpdateSample.ts
[backupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupsCreateSample.ts
[backupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupsDeleteSample.ts
[backupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupsGetSample.ts
[backupsgetstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupsGetStatusSample.ts
[backupsgetvolumerestorestatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupsGetVolumeRestoreStatusSample.ts
[backupslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupsListSample.ts
[backupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/backupsUpdateSample.ts
[netappresourcecheckfilepathavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/netAppResourceCheckFilePathAvailabilitySample.ts
[netappresourcechecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/netAppResourceCheckNameAvailabilitySample.ts
[netappresourcecheckquotaavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/netAppResourceCheckQuotaAvailabilitySample.ts
[netappresourcequeryregioninfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/netAppResourceQueryRegionInfoSample.ts
[netappresourcequotalimitsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/netAppResourceQuotaLimitsGetSample.ts
[netappresourcequotalimitslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/netAppResourceQuotaLimitsListSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/operationsListSample.ts
[poolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/poolsCreateOrUpdateSample.ts
[poolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/poolsDeleteSample.ts
[poolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/poolsGetSample.ts
[poolslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/poolsListSample.ts
[poolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/poolsUpdateSample.ts
[snapshotpoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotPoliciesCreateSample.ts
[snapshotpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotPoliciesDeleteSample.ts
[snapshotpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotPoliciesGetSample.ts
[snapshotpolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotPoliciesListSample.ts
[snapshotpolicieslistvolumessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotPoliciesListVolumesSample.ts
[snapshotpoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotPoliciesUpdateSample.ts
[snapshotscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotsCreateSample.ts
[snapshotsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotsDeleteSample.ts
[snapshotsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotsGetSample.ts
[snapshotslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotsListSample.ts
[snapshotsrestorefilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotsRestoreFilesSample.ts
[snapshotsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/snapshotsUpdateSample.ts
[subvolumescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/subvolumesCreateSample.ts
[subvolumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/subvolumesDeleteSample.ts
[subvolumesgetmetadatasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/subvolumesGetMetadataSample.ts
[subvolumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/subvolumesGetSample.ts
[subvolumeslistbyvolumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/subvolumesListByVolumeSample.ts
[subvolumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/subvolumesUpdateSample.ts
[vaultslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/vaultsListSample.ts
[volumegroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumeGroupsCreateSample.ts
[volumegroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumeGroupsDeleteSample.ts
[volumegroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumeGroupsGetSample.ts
[volumegroupslistbynetappaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumeGroupsListByNetAppAccountSample.ts
[volumequotarulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumeQuotaRulesCreateSample.ts
[volumequotarulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumeQuotaRulesDeleteSample.ts
[volumequotarulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumeQuotaRulesGetSample.ts
[volumequotaruleslistbyvolumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumeQuotaRulesListByVolumeSample.ts
[volumequotarulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumeQuotaRulesUpdateSample.ts
[volumesauthorizereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesAuthorizeReplicationSample.ts
[volumesbreakreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesBreakReplicationSample.ts
[volumescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesCreateOrUpdateSample.ts
[volumesdeletereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesDeleteReplicationSample.ts
[volumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesDeleteSample.ts
[volumesfinalizerelocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesFinalizeRelocationSample.ts
[volumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesGetSample.ts
[volumeslistreplicationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesListReplicationsSample.ts
[volumeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesListSample.ts
[volumespoolchangesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesPoolChangeSample.ts
[volumesreinitializereplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesReInitializeReplicationSample.ts
[volumesreestablishreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesReestablishReplicationSample.ts
[volumesrelocatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesRelocateSample.ts
[volumesreplicationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesReplicationStatusSample.ts
[volumesresetcifspasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesResetCifsPasswordSample.ts
[volumesresyncreplicationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesResyncReplicationSample.ts
[volumesrevertrelocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesRevertRelocationSample.ts
[volumesrevertsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesRevertSample.ts
[volumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/netapp/arm-netapp/samples/v17/typescript/src/volumesUpdateSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-netapp?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/netapp/arm-netapp/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
